--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -255,11 +255,13 @@
     <ClInclude Include="BBE\UtilTest.h" />
     <ClInclude Include="BBE\VulkanDescriptorPool.h" />
     <ClInclude Include="BBE\Vector3.h" />
+    <ClInclude Include="BBE\Vector4.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Matrix4.cpp" />
     <ClCompile Include="PrimitiveBrush3D.cpp" />
     <ClCompile Include="Vector3.cpp" />
+    <ClCompile Include="Vector4.cpp" />
     <ClCompile Include="VulkanDescriptorPool.cpp" />
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="Color.cpp" />
