--- a/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj.filters
+++ b/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="Tests\DataStructures\DynamicArrayTest.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Tests\Matrix4Test.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
