--- a/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj
+++ b/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj
@@ -150,6 +150,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Tests\MathTest.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Tests\AllTests.h" />
@@ -160,7 +161,6 @@
     <ClInclude Include="Tests\DataStructures\HashMapTest.h" />
     <ClInclude Include="Tests\DataStructures\ListTest.h" />
     <ClInclude Include="Tests\Matrix4Test.h" />
-    <ClInclude Include="Tests\OtherTest.h" />
     <ClInclude Include="Tests\PoolAllocatorTest.h" />
     <ClInclude Include="Tests\StackAllocatorTest.h" />
     <ClInclude Include="Tests\DataStructures\StackTest.h" />
