--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -225,6 +225,10 @@
     <ClInclude Include="BBE\Math.h" />
     <ClInclude Include="BBE\Matrix4.h" />
     <ClInclude Include="BBE\PrimitiveBrush3D.h" />
+    <ClInclude Include="BBE\Cube.h" />
+    <ClInclude Include="BBE\Mouse.h" />
+    <ClInclude Include="BBE\CursorMode.h" />
+    <ClInclude Include="BBE\CameraControlNoClip.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="BBE\STLAllocator.h" />
     <ClInclude Include="BBE\STLCapsule.h" />
@@ -255,9 +259,13 @@
     <ClInclude Include="BBE\VulkanDescriptorPool.h" />
     <ClInclude Include="BBE\Vector3.h" />
     <ClInclude Include="BBE\Vector4.h" />
+    <ClInclude Include="BBE\VWTransform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CameraControlNoClip.cpp" />
+    <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Matrix4.cpp" />
+    <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PrimitiveBrush3D.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="Vector4.cpp" />
@@ -296,6 +304,7 @@
     <ClCompile Include="VulkanSurface.cpp" />
     <ClCompile Include="VulkanSwapchain.cpp" />
     <ClCompile Include="VWDepthImage.cpp" />
+    <ClCompile Include="VWTransform.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
