--- a/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
@@ -288,6 +288,9 @@
     <ClInclude Include="BBE\VWTransform.h">
       <Filter>Header Files\GFX\Vulkan\Wrappers</Filter>
     </ClInclude>
+    <ClInclude Include="BBE\EngineSettings.h">
+      <Filter>Header Files\General</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -405,6 +408,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VWTransform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EngineSettings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
