--- a/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClInclude Include="BBE\EngineSettings.h">
       <Filter>Header Files\General</Filter>
     </ClInclude>
+    <ClInclude Include="BBE\VertexWithNormal.h">
+      <Filter>Header Files\GFX\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -411,6 +414,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EngineSettings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VertexWithNormal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
